# Github-Game-Status

./: Cargo.toml  README.md  build.rs
src/: app_data.rs  core_logic.rs  icon.rc  json_utils.rs  main.rs  ui_logic.rs
ui/: mainwindow.slint
