[package]
name = "Github-Game-Status"
version = "1.0.0"
edition = "2024"
build = "build.rs"
authors = ["HardCodeDev"]
license = "MIT"
repository = "https://github.com/HardCodeDev777/Github-Game-Status"

[dependencies]
slint = "1.12.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.140"
sysinfo = "0.36.0"

[build-dependencies]
slint-build = "1.12.1"
